--- a/C#/shanuMVCUserRoles/Views/Shop/ProductDetails.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Shop/ProductDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@*@{
+﻿@{
     ViewBag.Title = "ProductDetails";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -241,4 +241,4 @@
 
     });
 </script>
-<!--// end-smoth-scrolling -->*@
+<!--// end-smoth-scrolling -->
