--- a/C#/shanuMVCUserRoles/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/C#/shanuMVCUserRoles/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -147,7 +147,20 @@ desired effect
                     <li class="header">HEADER</li>
                     <!-- Optionally, you can add icons to the links -->
                     <li>@Html.ActionLink("Bài Viết", "Index", "Page")</li>
-                    <li>@Html.ActionLink("Quản Lý Cửa Hàng", "Index", "Shop")</li>
+
+                    <li>
+                        <a href="#">Quản Lý Cửa Hàng<span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level">
+                            <li>
+                                @Html.ActionLink("Loại Sản Phẩm", "Categories", "Shop")
+                            </li>
+                            <li>
+                                @Html.ActionLink("Sản Phẩm", "Products", "Shop")
+                            </li>
+                        </ul>
+                </ul>
+                <!-- /.nav-second-level -->
+                </li>
                 </ul>
                 <!-- /.sidebar-menu -->
             </section>
