--- a/C#/shanuMVCUserRoles/Views/Shop/ProductDetails.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Shop/ProductDetails.cshtml
@@ -10,13 +10,16 @@
             <div class="row">
                 <div class="col-lg-4 single-right-left ">
                     <div class="grid images_3_of_2">
+                        <div class="col-xs-12 col-md-4">
+                            <img src="/Images/Products/@Model.Id/Thumbs/@Model.Image"/>
+                        </div>
                         <div class="flexslider1">
 
                             <ul class="slides">
                                 @foreach (var item in Model.GalleryImages)
                                 {
-                                    <li data-thumb="../../Images/Products/@Model.Id/Gallery/@item">
-                                        <div class="thumb-image"> <img src="../../Images/Products/@Model.Id/Gallery/@item" data-imagezoom="true" class="img-fluid" alt=" "> </div>
+                                    <li data-thumb="/Images/Products/@Model.Id/@item">
+                                        <div class="thumb-image"> <img src="/Images/Products/@Model.Id/Gallery/Thumbs/@item" data-imagezoom="true" class="img-fluid" alt=" "> </div>
                                     </li>
                                 }
                             </ul>
