modify home page

--- a/C#/shanuMVCUserRoles/Views/Shared/_Layout.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Shared/_Layout.cshtml
@@ -162,36 +162,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 SẢN PHẨM
                             </a>
                             <ul class="dropdown-menu mega-menu ">
-                                <li>
-                                    <a href="Shop">Dầu đậu phộng</a>
-                                </li>
-                                <li>
-                                    <a href="Shop">Dầu đậu nành</a>
-                                </li>
+                                @Html.Action("Menu", "Navigation")
                             </ul>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true"
-                               aria-expanded="false">
-                                BLOG
-                            </a>
-                            <ul class="dropdown-menu mega-menu ">
-                                <li class="media-mini mt-3">
-                                    <a href="shop.html">Designer Glasses</a>
-                                </li>
-                                <li class="">
-                                    <a href="shop.html"> Ray-Ban</a>
-                                </li>
-                                <li>
-                                    <a href="shop.html">Prescription Glasses</a>
-                                </li>
-                                <li class="mt-2">
-                                    <a href="about.html">About</a>
-                                </li>
-                                <li>
-                                    <a href="customer.html">Customers</a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">BLOG</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">LIÊN HỆ</a>
