--- a/C#/shanuMVCUserRoles/Views/Home/Index.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Home/Index.cshtml
@@ -17,8 +17,7 @@
                         UY TÍN - CHẤT LƯỢNG
                         <span>Bạn có muốn những tinh dầu chất lượng nhất?</span>
                     </h3>
-                    <a href="shop.html" class="btn btn-sm animated-button gibson-three mt-4">Shop Now</a>
-
+                    @Html.ActionLink("Mua Ngay", "Index", "Shop",null, new { @class = "btn btn-sm animated-button gibson-three mt-4" })
                 </div>
             </div>
             <div class="carousel-item item2">
@@ -27,8 +26,7 @@
                         TỐT CHO SỨC KHỎE
                         <span>Được chiếc xuất từ 100% hạt đậu phộng nguyên chất được chọn lọc</span>
                     </h3>
-                    <a href="shop.html" class="btn btn-sm animated-button gibson-three mt-4">Shop Now</a>
-
+                    @Html.ActionLink("Mua Ngay", "Index", "Shop", null, new { @class = "btn btn-sm animated-button gibson-three mt-4" })
                 </div>
             </div>
             <div class="carousel-item item3">
@@ -37,7 +35,7 @@
                         GIAO HÀNG TẬN NHÀ
                         <span>Miễn phí giao hàng cho đơn hàng từ 2L trở lên</span>
                     </h3>
-                    <a href="shop.html" class="btn btn-sm animated-button gibson-three mt-4">Shop Now</a>
+                    @Html.ActionLink("Mua Ngay", "Index", "Shop", null, new { @class = "btn btn-sm animated-button gibson-three mt-4" })
                 </div>
             </div>
             <div class="carousel-item item4">
@@ -46,7 +44,7 @@
                         GIAO HÀNG CỰC NHANH
                         <span>Bạn cứ thỏa thích nấu ăn còn lại hãy để PEANUT lo ;)</span>
                     </h3>
-                    <a href="shop.html" class="btn btn-sm animated-button gibson-three mt-4">Shop Now</a>
+                    @Html.ActionLink("Mua Ngay", "Index", "Shop", null, new { @class = "btn btn-sm animated-button gibson-three mt-4" })
                 </div>
             </div>
         </div>
@@ -245,7 +243,7 @@
                         <h4 class="sub-tittle-w3layouts my-lg-4 my-3">Đảm Bảo Sự Hài Lòng</h4>
                         <p>Với cái tâm trong nghề mang lại sức khỏe cho mọi gia đình, chúng tôi cam kết mang tới cho Quý khách hàng sản phẩm Dầu Lạc Nguyên Chất  – Nguyên Chất Trong Từng Giọt Dầu!</p>
                         <p>
-                            <a href="shop.html" class="btn btn-sm animated-button gibson-three mt-4">Shop Now</a>
+                            @Html.ActionLink("Mua Ngay", "Index", "Shop", null, new { @class = "btn btn-sm animated-button gibson-three mt-4" })
                         </p>
                     </div>
                     <!-- /.col-lg-4 -->
@@ -257,7 +255,7 @@
                         <h4 class="sub-tittle-w3layouts my-lg-4 my-3">Ship Hàng Cực Nhanh</h4>
                         <p>Gọi là có order càng nhiều hàng đến càng nhanh. Bất kì nơi nào, mọi lúc mọi nơi, nhấc máy ngay hàng đến tay.  Miễn phí giao hàng cho đơn hàng từ 2L trở lên. </p>
                         <p>
-                            <a href="shop.html" class="btn btn-sm animated-button gibson-three mt-4">Shop Now</a>
+                            @Html.ActionLink("Mua Ngay", "Index", "Shop", null, new { @class = "btn btn-sm animated-button gibson-three mt-4" })
                         </p>
                     </div>
                     <!-- /.col-lg-4 -->
@@ -269,7 +267,7 @@
                         <h4 class="sub-tittle-w3layouts my-lg-4 my-3">Chính Sách Đổi Trả Tuyệt Vời</h4>
                         <p>Bạn sẽ được nhận sản phẩm mới hoặc được hoàn tiền 110% nếu sản phẩm của chúng tôi có dấu hiệu lạ và đang trong hạn sử dụng.</p>
                         <p>
-                            <a href="shop.html" class="btn btn-sm animated-button gibson-three mt-4">Shop Now</a>
+                            @Html.ActionLink("Mua Ngay", "Index", "Shop", null, new { @class = "btn btn-sm animated-button gibson-three mt-4" })
                         </p>
                     </div>
                     <!-- /.col-lg-4 -->
